// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly for authenticated users on desktop 1`] = `
<header
  className="site-header-desktop"
>
  <div
    className="container-fluid"
  >
    <div
      className="nav-container position-relative d-flex align-items-center"
    >
      <a
        className="logo"
        href="http://localhost:18010"
      >
        <img
          alt="Studio edX"
          className="d-block"
          src="test-file-stub"
        />
      </a>
      <a
        aria-label="Back to course outline in Studio"
        className="course-title-lockup"
        href="http://localhost:18010/course/course-v1:edX+DemoX+Demo_Course"
        style={
          Object {
            "lineHeight": 1,
          }
        }
      >
        course-v1:edX+DemoX+Demo_Course
      </a>
      <nav
        aria-label="Main"
        className="nav main-nav"
      >
        <div
          className="menu nav-item"
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            aria-expanded={false}
            aria-haspopup="menu"
            className="menu-trigger nav-link d-inline-flex align-items-center"
            onClick={[Function]}
          >
            Content
             
            <svg
              aria-hidden={true}
              focusable="false"
              height="16px"
              role="img"
              version="1.1"
              viewBox="0 0 16 16"
              width="16px"
            >
              <path
                d="M7,4 L7,8 L11,8 L11,10 L5,10 L5,4 L7,4 Z"
                fill="currentColor"
                transform="translate(8.000000, 7.000000) rotate(-45.000000) translate(-8.000000, -7.000000) "
              />
            </svg>
          </a>
        </div>
        <div
          className="menu nav-item"
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            aria-expanded={false}
            aria-haspopup="menu"
            className="menu-trigger nav-link d-inline-flex align-items-center"
            onClick={[Function]}
          >
            Settings
             
            <svg
              aria-hidden={true}
              focusable="false"
              height="16px"
              role="img"
              version="1.1"
              viewBox="0 0 16 16"
              width="16px"
            >
              <path
                d="M7,4 L7,8 L11,8 L11,10 L5,10 L5,4 L7,4 Z"
                fill="currentColor"
                transform="translate(8.000000, 7.000000) rotate(-45.000000) translate(-8.000000, -7.000000) "
              />
            </svg>
          </a>
        </div>
        <div
          className="menu nav-item"
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            aria-expanded={false}
            aria-haspopup="menu"
            className="menu-trigger nav-link d-inline-flex align-items-center"
            onClick={[Function]}
          >
            Tools
             
            <svg
              aria-hidden={true}
              focusable="false"
              height="16px"
              role="img"
              version="1.1"
              viewBox="0 0 16 16"
              width="16px"
            >
              <path
                d="M7,4 L7,8 L11,8 L11,10 L5,10 L5,4 L7,4 Z"
                fill="currentColor"
                transform="translate(8.000000, 7.000000) rotate(-45.000000) translate(-8.000000, -7.000000) "
              />
            </svg>
          </a>
        </div>
      </nav>
      <nav
        aria-label="Secondary"
        className="nav secondary-menu-container align-items-center ml-auto"
      >
        <div
          className="menu null"
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup="menu"
            aria-label="Account menu for edX"
            className="menu-trigger btn btn-light d-inline-flex align-items-center pl-2 pr-3"
            onClick={[Function]}
          >
            <span
              className="avatar overflow-hidden d-inline-flex rounded-circle mr-2"
              style={
                Object {
                  "height": "1.5em",
                  "width": "1.5em",
                }
              }
            >
              <svg
                aria-hidden={true}
                className="text-muted"
                focusable="false"
                height="24px"
                role="img"
                style={
                  Object {
                    "height": "1.5em",
                    "width": "1.5em",
                  }
                }
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M4.10255106,18.1351061 C4.7170266,16.0581859 8.01891846,14.4720277 12,14.4720277 C15.9810815,14.4720277 19.2829734,16.0581859 19.8974489,18.1351061 C21.215206,16.4412566 22,14.3122775 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,14.3122775 2.78479405,16.4412566 4.10255106,18.1351061 Z M12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 Z M12,13 C9.790861,13 8,11.209139 8,9 C8,6.790861 9.790861,5 12,5 C14.209139,5 16,6.790861 16,9 C16,11.209139 14.209139,13 12,13 Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            edX
             
            <svg
              aria-hidden={true}
              focusable="false"
              height="16px"
              role="img"
              version="1.1"
              viewBox="0 0 16 16"
              width="16px"
            >
              <path
                d="M7,4 L7,8 L11,8 L11,10 L5,10 L5,4 L7,4 Z"
                fill="currentColor"
                transform="translate(8.000000, 7.000000) rotate(-45.000000) translate(-8.000000, -7.000000) "
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </div>
</header>
`;

exports[`<Header /> renders correctly for authenticated users on mobile 1`] = `
<header
  aria-label="Main"
  className="site-header-mobile d-flex justify-content-between align-items-center shadow sticky-top"
>
  <div
    className="w-100 d-flex justify-content-start"
  >
    <div
      className="menu position-static"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Main Menu"
        className="menu-trigger icon-button"
        onClick={[Function]}
        title="Main Menu"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height="24px"
          role="img"
          style={
            Object {
              "height": "1.5rem",
              "width": "1.5rem",
            }
          }
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="5"
          />
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="11"
          />
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="17"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="w-100 d-flex justify-content-center"
  >
    <a
      className="logo"
      href="http://localhost:18010"
      itemType="http://schema.org/Organization"
    >
      <img
        alt="Studio edX"
        className="d-block"
        src="test-file-stub"
      />
    </a>
  </div>
  <div
    className="w-100 d-flex justify-content-end align-items-center"
  >
    <nav
      aria-label="Secondary"
      className="menu position-static"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Account Menu"
        className="menu-trigger icon-button"
        onClick={[Function]}
        title="Account Menu"
      >
        <span
          className="avatar overflow-hidden d-inline-flex rounded-circle null"
          style={
            Object {
              "height": "1.5rem",
              "width": "1.5rem",
            }
          }
        >
          <svg
            aria-hidden={true}
            className="text-muted"
            focusable="false"
            height="24px"
            role="img"
            style={
              Object {
                "height": "1.5rem",
                "width": "1.5rem",
              }
            }
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M4.10255106,18.1351061 C4.7170266,16.0581859 8.01891846,14.4720277 12,14.4720277 C15.9810815,14.4720277 19.2829734,16.0581859 19.8974489,18.1351061 C21.215206,16.4412566 22,14.3122775 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,14.3122775 2.78479405,16.4412566 4.10255106,18.1351061 Z M12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 Z M12,13 C9.790861,13 8,11.209139 8,9 C8,6.790861 9.790861,5 12,5 C14.209139,5 16,6.790861 16,9 C16,11.209139 14.209139,13 12,13 Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </nav>
  </div>
</header>
`;
